--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@privy-io/react-auth": "^1.95.2",
     "@tanstack/react-query": "^5.62.0",
+    "framer-motion": "^11.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "viem": "^2.21.53",
-    "wagmi": "^2.13.2",
     "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.6"
+    "react-router-dom": "^7.0.1",
+    "react-toastify": "^10.0.6",
+    "viem": "^2.21.53",
+    "wagmi": "^2.13.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
